pretty CRT effects. TODO: sticky position on psuedo ::before on body to fix scanline effect cutoff

--- a/site/sass/components/_card-subnav.phosphor.scss
+++ b/site/sass/components/_card-subnav.phosphor.scss
@@ -84,7 +84,7 @@
   }
 
   &__icon {
-    fill: var(--white);
+    fill: var(--grey-50);
     height: 1rem;
     transform: scale(1.5);
     width: 1.25rem;
